--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -46,13 +46,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Install Ruby and gems
-        uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
+        uses: ruby/setup-ruby@v1
         with:
+          ruby-version: 3.0.6
           bundler-cache: true
       # Add or replace any other lints here
       - name: Security audit dependencies
         run: bin/bundler-audit --update
-      - name: Security audit application code
-        run: bin/brakeman -q -w2
       - name: Lint Ruby files
         run: bin/rubocop --parallel
