--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Install Bundler
-        run: gem install bundler -v 2.2.33
+        run: sudo gem install bundler -v 2.2.33
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@v1
         with:
