--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -53,6 +53,6 @@ jobs:
           ruby-version: 3.0.6
           bundler-cache: true
       - name: Security audit dependencies
-        run: bin/bundler-audit --update
+        run: bundle exec bundle-audit check --update
       - name: Lint Ruby files
-        run: bin/rubocop --parallel
+        run: bundle exec rubocop
