--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -40,10 +40,10 @@ jobs:
   #     - name: Run tests
   #       run: bin/rake
 
-  lint:
+  bundle-audit:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v3
       - name: Install Bundler
         run: sudo gem install bundler -v 2.2.33
@@ -54,5 +54,19 @@ jobs:
           bundler-cache: true
       - name: Security audit dependencies
         run: bundle exec bundle-audit check --update
-      - name: Lint Ruby files
+      - name: Rubocop
         run: bundle exec rubocop
+  rubocop:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install Bundler
+        run: sudo gem install bundler -v 2.2.33
+      - name: Install Ruby and gems
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.0.6
+          bundler-cache: true
+      - name: Rubocop
+        run: bundle exec rubocop --parallel --safe
