--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -4,13 +4,27 @@
 #
 # This workflow will install a prebuilt Ruby version, install dependencies, and
 # run tests and linters.
-name: "Ruby on Rails CI"
+name: "CI"
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install Bundler
+        run: sudo gem install bundler -v 2.2.33
+      - name: Install Ruby and gems
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.0.6
+          bundler-cache: true
+
+  # docker
   # test:
   #   runs-on: ubuntu-latest
   #   services:
@@ -41,17 +55,9 @@ jobs:
   #       run: bin/rake
 
   bundle-audit:
+    needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Install Bundler
-        run: sudo gem install bundler -v 2.2.33
-      - name: Install Ruby and gems
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 3.0.6
-          bundler-cache: true
       - name: Security audit dependencies
         run: bundle exec bundle-audit check --update
   rubocop:
@@ -68,3 +74,17 @@ jobs:
           bundler-cache: true
       - name: Rubocop
         run: bundle exec rubocop --parallel --safe
+  test-spec:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install Bundler
+        run: sudo gem install bundler -v 2.2.33
+      - name: Install Ruby and gems
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.0.6
+          bundler-cache: true
+      - name: Security audit dependencies
+        run: bundle exec bundle-audit check --update
